Fixed CSS header weights, tidied up the top nav so that it looks better on mobilewq

--- a/microcosm/static/themes/1/css/bootstrap.css
+++ b/microcosm/static/themes/1/css/bootstrap.css
@@ -416,7 +416,7 @@ h6,
 .h5,
 .h6 {
   font-family: inherit;
-  font-weight: 400;
+  font-weight: 200;
   line-height: 1.125;
 }
 
